Remove deprecated warnings.